change frontend to tsx, working cpp dockerfiles